methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
    while (isOverBaggle()==false){
      
      if (isFacingWall()==false){
        forward()
        if (getGroundColor()==Color.green){
          return(true)
        }
        else {
          backward()
        }
      }
      
      right()
      if (isFacingWall()==false){
        forward()
        if (getGroundColor()==Color.green){
          return(true)
        }
        else {
          backward()
          left()
        }
      }
      
      left()
      if (isFacingWall()==false){
        forward()
        if (getGroundColor()==Color.green){
          return(true)
        }
        else {
          backward()
          right()
        }
      }
      
      if (isBackingWall()==false){
        backward()
        if (getGroundColor()==Color.green){
          return(true)
        }
        else {
          forward()
        }
      }
      
    }
}